refactor: create and plsit DOMcontroller and gamecontroller modules

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Battleship</title>
+        <title>Battleship App</title>
     </head>
 
     <body>
@@ -13,10 +13,12 @@
             <!-- Status of ships lost -->
             <!-- Status of ships destroyed -->
         </div>
+
         <div class="game-cont">
-            <div class="boardOne"></div>
-            <div class="boardTwo"></div>
+            <div class="gameboard-cont" id="ship"></div>
+            <div class="gameboard-cont" id="shooting"></div>
         </div>
+
         <div class="btn-menu">
              <button id="btn-reset">Reset Game</button>
              <!-- btn-cheat -->
