--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,7 @@
     </head>
 
     <body>
-        <h1>Battleship</h1>
-        <div class="scoreboard-cont">
-            <!-- Show whose turn -->
-            <!-- Status of ships lost -->
-            <!-- Status of ships destroyed -->
-        </div>
+        <h1>BATTLESHIP</h1>
 
         <div class="game-cont">
             <div class="gameboard-cont" id="ship"></div>
@@ -21,7 +16,11 @@
 
         <div class="btn-menu">
              <button id="btn-reset">Reset Game</button>
-             <!-- btn-cheat -->
         </div>
+
+        <dialog>
+            <div id="win-message"></div>
+        </dialog>
+        
     </body>
 </html>
