--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,10 @@
              <button id="btn-reset">Reset Game</button>
         </div>
 
+        <div class="footer">
+            <div>"Battleship" Project by <a href="https://github.com/andrewtran28/battleship">minglee</a> (2024)</div>
+        </div>
+
         <dialog>
             <div id="win-message"></div>
         </dialog>
